# remote_io_plugin

./: README.md
remote_io_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
remote_io_plugin/include/remote_io_plugin/: my_plugin.h
remote_io_plugin/scripts/: remote_io_plugin
remote_io_plugin/src/remote_io_plugin/: my_plugin.cpp  my_plugin.ui
