<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>remote_io_plugin</name>
  <version>0.0.0</version>
  <description>The rqt_example_cpp package</description>
  <maintainer email="lucasw_backwards@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rqt/Tutorials/Writing%20a%20C%2B%2B%20Plugin</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
